--- a/assets/css/custom/style.css
+++ b/assets/css/custom/style.css
@@ -1155,3 +1155,202 @@ h3:after {
   font-size:0.8em
 }
 }
+
+
+footer
+{
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+}
+.video-container
+{
+    width: 100%;
+    padding-top: 56.25%;
+    height: 0px;
+    position: absolute;
+	background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, rgba(0,0,0,0.8) 100%);
+}
+.video-container video
+{
+	z-index: -1;
+}
+.bg-1
+{
+	z-index: 2;
+	padding-top: 90px;
+	padding-bottom: 90px;
+}
+.footer-heading
+{
+	color: #FFFFFF;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 17px;
+	margin: 0px;
+	position: relative;
+	letter-spacing: 2px;
+	padding: 0px 0px 0px 10px;
+	margin-bottom: 50px;
+}
+.footer-heading::before
+{
+	content: '';
+	width: 2px;
+	height: 70%;
+	background-color: var(--golden);
+	display: inline-block;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 0;
+}
+.footer-heading::after
+{
+	content: '';
+	width: 100%;
+	height: 1px;
+	background-color: rgba(255,255,255,0.2);
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 50px;
+}
+.text-1
+{
+	color: rgba(255,255,255,0.5);
+}
+.text-2
+{
+	color: rgba(255,255,255,0.4);
+	font-weight: 700;
+	font-size: 13px;
+	line-height: 0px;
+	text-shadow: 0px 6px 6px rgb(0 0 0 / 20%);
+}
+.footer-menu
+{
+	padding: 0px;
+}
+.footer-menu li
+{
+	list-style: none;
+	transition: 300ms ease-in-out;
+	margin: 7px 0px;
+}
+.footer-menu li a
+{
+	text-transform: capitalize;
+	color: rgba(255,255,255,0.7);
+	text-decoration: none;
+}
+.footer-menu li::before
+{
+	content: '\f101';
+	font-family:'FontAwesome';
+	display: inline-block;
+	position: relative;
+	left: 0;
+	margin-right: 15px;
+	color: var(--golden);
+	font-size: 10px;
+}
+.footer-menu li:hover
+{
+	padding-left: 10px;
+}
+.footer-menu li:hover .nav-item
+{
+	color: var(--golden);
+}
+.footer-heading + form > input
+{
+	background: transparent;
+	border: 1px solid rgba(255,255,255,0.2);
+	transition: 300ms ease-in-out all;
+}
+.footer-heading + form > input:focus
+{
+	background: transparent;
+	border: 1px solid var(--golden);
+	color: var(--golden);
+	box-shadow: rgba(214, 195, 120, 0.2) 0px 2px 8px 0px;
+}
+.footer-heading + form > ::placeholder
+{
+	text-transform: capitalize;
+	color: #FFFFFF;
+	font-size: 14px;
+}
+.footer-heading + form > button
+{
+	text-transform: capitalize;
+	background-color: rgba(255,255,255,0.2);
+	backdrop-filter: blur(15px);
+	border: none !important;
+	color: #FFFFFF;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+	overflow: hidden;
+}
+.hvr-sweep-to-right:before
+{
+	background: var(--golden);
+}
+.partners img
+{
+	filter: contrast(0%);
+	transition: 300ms ease-in-out all;
+}
+.partners img:hover
+{
+	filter: contrast(100%);
+	cursor: pointer;
+}
+.bg-2
+{
+	background-color: rgba(255,255,255,0.1);
+	backdrop-filter: blur(15px);
+}
+.footer-social
+{
+	margin: 0px;
+	padding: 0px;
+}
+.footer-social li
+{
+	display: inline-block;
+	list-style: none;
+	position: relative;
+}
+.footer-social li
+{
+	margin: 0px 17px;
+	transition: 300ms ease-in-out all;
+}
+.footer-social li a i
+{
+	color: #FFFFFF;
+}
+.footer-social li:hover
+{
+	background-color: var(--golden);
+}
+.footer-social li:hover a
+{
+	color: #FFFFFF;
+}
+.footer-social li a
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: inline-block;
+	color: #171717;
+}
+.typing
+{
+	color: #FFFFFF;
+	font-weight: 300;
+	margin: 0px;
+}
